	by accessibility guidelines.
   11. The <?xml> directive produced by start_html is now turned off by
        default and the charset is specified in a <meta> directive.  Apparently
        IE6 (and maybe some versions of Opera) were getting confused by this.
   12. Support for tab indexes.
   13. Retired the HTML docs.  The POD docs are now primary documentation.

  Version 3.05

    1. Fixed uninitialized variable warning on start_form() when running
       from command line.
    2. Fixed CGI::_set_attributes so that attributes with a - are handled
       correctly.
    3. Fixed CGI::Carp::die() so as to avoid problems from _longmess()
       clobbering @_.
    4. If HTTP_X_FORWARDED_HOST is defined (i.e. running under a proxy),
       the various functions that return HOST will use that instead.
    5. Fix for undefined utf8() call in CGI::Util.
    6. Changed the call to warningsToBrowser() in
       CGI::Carp::fatalsToBrowser to call only after HTTP header is sent
       (thanks to Didier Lebrun for noticing).
    7. Patches from Dan Harkless to make CGI.pm validatable against HTML
       3.2.
    8. Fixed an extraneous "foo=bar" appearing when extra style
       parameters passed to start_html;
    9. Fixed cross-site scripting bug in startform() pointed out by Dan
       Harkless.
   10. Fixed documentation to discuss list context behavior of
       form-element generators explicitly.
   11. Fixed incorrect results from end_form() when called in OO manner.
   12. Fixed query string stripping in order to handle URLs containing
       escaped newlines.
   13. During server push, set NPH to 0 rather than 1. This is supposed
       to fix problems with Apache.
   14. Fixed incorrect processing of multipart form fields that contain
       embedded quotes. There's still the issue of how to handle ones
       that contain embedded semicolons, but no one has complained (yet).
   15. Fixed documentation bug in -style argument to start_html()